# 99-problems-ocaml

./: .gitignore  .ocamlinit  README.md  dune-project  p01.ml  p02.ml  p03.ml  p04.ml  p05.ml  p06.ml  p08.ml  problems.opam  run.sh
src/: dune  p01.ml  p02.ml  p03.ml  p04.ml  p05.ml  p06.ml  p07.ml  p08.ml  p09.ml  p10.ml  p11.ml  p12.ml  p13.ml  p14.ml  p15.ml  p16.ml  p17.ml  p18.ml  p19.ml  p20.ml  p21.ml  p22.ml  p23.ml  p24.ml  p25.ml  p26.ml  p27.ml  p28.ml  p29.ml  p30.ml  p31.ml  p32.ml  p33.ml  p34.ml  p35.ml  p36.ml  p37.ml  p38.ml  p39.ml  (+20 more)
